<resources>
    <string name="app_name">1Lab</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="sign_up_password_text">Type your password</string>
    <string name="sign_up_email_text">Your email</string>
    <string name="sign_up_name_text">Your name</string>
    <string name="sign_up_phone_text">Type your phone</string>
    <string name="sign_in_link_text">Already have an account? Sign In!</string>
    <string name="sign_up_link_text">Don\'t have an account? Sign Up!</string>
    <string name="welcome_text">Welcome, </string>
    <string name="welcome_sign_out_button_text">Sign out</string>
    <string name="field_validation_is_empty_text">Field is empty!</string>
    <string name="email_validation_text">Email is invalid</string>
    <string name="password_validation_text">Password must be at least 8 characters long</string>
    <string name="phone_validation_text">Phone number must be in +380********* format</string>
    <string name="name_validation_text">Your name is too short or has prohibited symbols</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="sign_in_incorrect">Incorrect email or password</string>
    <string name="show_square">Square: %1$s</string>
    <string name="show_detour_time">Detour time: %1$s</string>
    <string name="no_internet_connection">NO INTERNET CONNECTION</string>
    <string name="loading_failed">LOADING FAILED</string>
    <string name="logout_text">Logout</string>
    <string name="tab2_text">Tab #2</string>
    <string name="user_info_updated">User info was updated</string>
    <string name="user_picture_upload">User picture was uploaded</string>
    <string name="title_user_profile">User profile</string>
    <string name="title_blank">Blank</string>
    <string name="title_territory_details">Territory details</string>
    <string name="title_territory">Territories list</string>
    <string name="title_territories">Territories list</string>
    <string name="name_input_hint">Name</string>
    <string name="email_input_hint">Email</string>
    <string name="save_changes_button">Save changes</string>
    <string name="back_to_list_text">Back to list</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="add_territory">Add territory</string>
    <string name="territory_name">Territory name</string>
    <string name="territory_square">Territory square</string>
    <string name="territory_detour_time">Territory detour time</string>
    <string name="title_activity_add_territory">Add territory</string>
    <string name="incorrect_territory_data" />
    <string name="number_validation_text">Enter valid number</string>


</resources>
