<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/user_profile_picture"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:src="@drawable/ic_person_24px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_change_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:hint="@string/sign_up_name_text"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"

        app:layout_constraintTop_toBottomOf="@id/user_profile_picture">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_change_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_change_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/sign_up_email_text"
        android:selectAllOnFocus="true"
        app:layout_constraintTop_toBottomOf="@id/name_change_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_change_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/save_changes_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:text="@string/save_changes_button"
        app:layout_constraintTop_toBottomOf="@id/email_change_input" />

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:text="@string/welcome_sign_out_button_text"
        app:layout_constraintTop_toBottomOf="@id/save_changes_button" />


</androidx.constraintlayout.widget.ConstraintLayout>